@@ -1,13 +1,12 @@
-*.gmo
 Makefile
 Makefile.in
 aclocal.m4
-acinclude.m4
+autom4te.cache
 configure
 config.cache
 config.h
 config.hin
 config.log
 config.status
-stamp-h.in
 stamp-h 
+stamp-h1
