@@ -1,2 +1,7 @@
 Makefile
 Makefile.in
+bre.script
+ere.script
+khadafy.out
+patfile
+spencer1.script
